--- a/build.gradle
+++ b/build.gradle
@@ -14,4 +14,5 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile group: 'io.netty', name: 'netty-all', version: '4.1.38.Final'
+    compile group: 'com.google.protobuf', name: 'protobuf-java', version: '3.9.1'
 }
